tests/compile/scope_mutable_aliasing.stderr
error[E0599]: no method named `scope` found for struct `Lua` in the current scope
  --> tests/compile/scope_mutable_aliasing.rs:10:9
   |
10 |     lua.scope(|scope| {
   |     ----^^^^^ method not found in `Lua`
